# S-Engine

./: .envrc  .gitignore  .gitmodules  Engine.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  main.cpp  meson.build  utils.cpp  utils.h
Engine/: Engine.cpp  Engine.h  Mesh.cpp  Mesh.h
Physics/: Physics.cpp  Physics.h  QuickHull.cpp  QuickHull.h  Triangle.cpp  Triangle.h
Renderer/: Renderer.cpp  Renderer.h
common/: Camera.cpp  Camera.h  Interfaces.cpp  Interfaces.h
shaders/: meson.build  shader.frag  shader.vert  solidColor.frag  solidColor.vert  texturedShader.frag  texturedShader.vert
textures/: meson.build
